Polyglot replaces Torquebox as the application server basis